docs/api/qiskit/0.43/qiskit.circuit.SwitchCaseOp.mdx
---
title: SwitchCaseOp
description: API reference for qiskit.circuit.SwitchCaseOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.SwitchCaseOp
---

# SwitchCaseOp

<Class id="qiskit.circuit.SwitchCaseOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py" signature="SwitchCaseOp(target, cases, *, label=None)">
  Bases: [`ControlFlowOp`](qiskit.circuit.ControlFlowOp "qiskit.circuit.controlflow.control_flow.ControlFlowOp")

  A circuit operation that executes one particular circuit block based on matching a given `target` against an ordered list of `values`. The special value `CASE_DEFAULT` can be used to represent a default condition.

  This is the low-level interface for creating a switch-case statement; in general, the circuit method `QuantumCircuit.switch_case()` should be used as a context manager to access the builder interface. At the low level, you must ensure that all the circuit blocks contain equal numbers of qubits and clbits, and that the order the virtual bits of the containing circuit should be bound is the same for all blocks. This will likely mean that each circuit block is wider than its natural width, as each block must span the union of all the spaces covered by \_any\_ of the blocks.

  **Parameters**

  *   **target** ([*Clbit*](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")  *|*[*ClassicalRegister*](qiskit.circuit.ClassicalRegister "qiskit.circuit.classicalregister.ClassicalRegister")) – the runtime value to switch on.
  *   **cases** (*Iterable\[Tuple\[Any,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")*]]*) – an ordered iterable of the corresponding value of the `target` and the circuit block that should be executed if this is matched. There is no fall-through between blocks, and the order matters.

  Create a new instruction.

  **Parameters**

  *   **name** (*str*) – instruction name
  *   **num\_qubits** (*int*) – instruction’s qubit width
  *   **num\_clbits** (*int*) – instruction’s clbit width
  *   **params** (*list\[int|float|complex|str|ndarray|list|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")*]*) – list of parameters
  *   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
  *   **unit** (*str*) – time unit of duration
  *   **label** (*str or None*) – An optional label for identifying the instruction.

  **Raises**

  *   **CircuitError** – when the register is not in the correct format.
  *   **TypeError** – when the optional label is provided, but it is not a string.

  ## Methods

  <span id="qiskit-circuit-switchcaseop-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.SwitchCaseOp.add_decomposition" name="add_decomposition" signature="SwitchCaseOp.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-switchcaseop-assemble" />

  ### assemble

  <Function id="qiskit.circuit.SwitchCaseOp.assemble" name="assemble" signature="SwitchCaseOp.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-switchcaseop-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.SwitchCaseOp.broadcast_arguments" name="broadcast_arguments" signature="SwitchCaseOp.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-switchcaseop-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.SwitchCaseOp.c_if" name="c_if" signature="SwitchCaseOp.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-switchcaseop-cases" />

  ### cases

  <Function id="qiskit.circuit.SwitchCaseOp.cases" name="cases" signature="SwitchCaseOp.cases()">
    Return a lookup table from case labels to the circuit that would be executed in that case. This object is not generally suitable for creating a new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") because any keys that point to the same object will not be grouped.

    <Admonition title="See also" type="note">
      #### [`SwitchCaseOp.cases_specifier()`](qiskit.circuit.SwitchCaseOp#cases_specifier "qiskit.circuit.SwitchCaseOp.cases_specifier")

      An alternate method that produces its output in a suitable format for creating new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") instances.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-switchcaseop-cases-specifier" />

  ### cases\_specifier

  <Function id="qiskit.circuit.SwitchCaseOp.cases_specifier" name="cases_specifier" signature="SwitchCaseOp.cases_specifier()">
    Return an iterable where each element is a 2-tuple whose first element is a tuple of jump values, and whose second is the single circuit block that is associated with those values.

    This is an abstract specification of the jump table suitable for creating new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") instances.

    <Admonition title="See also" type="note">
      #### [`SwitchCaseOp.cases()`](qiskit.circuit.SwitchCaseOp#cases "qiskit.circuit.SwitchCaseOp.cases")

      Create a lookup table that you can use for your own purposes to jump from values to the circuit that would be executed.
    </Admonition>

    **Return type**

    *Iterable*\[*Tuple*\[*Tuple*, [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]]
  </Function>

  <span id="qiskit-circuit-switchcaseop-copy" />

  ### copy

  <Function id="qiskit.circuit.SwitchCaseOp.copy" name="copy" signature="SwitchCaseOp.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if `None` then the name stays the same.

    **Returns**

    a copy of the current instruction, with the name updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-switchcaseop-inverse" />

  ### inverse

  <Function id="qiskit.circuit.SwitchCaseOp.inverse" name="inverse" signature="SwitchCaseOp.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-switchcaseop-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.SwitchCaseOp.is_parameterized" name="is_parameterized" signature="SwitchCaseOp.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-switchcaseop-qasm" />

  ### qasm

  <Function id="qiskit.circuit.SwitchCaseOp.qasm" name="qasm" signature="SwitchCaseOp.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-switchcaseop-repeat" />

  ### repeat

  <Function id="qiskit.circuit.SwitchCaseOp.repeat" name="repeat" signature="SwitchCaseOp.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-switchcaseop-replace-blocks" />

  ### replace\_blocks

  <Function id="qiskit.circuit.SwitchCaseOp.replace_blocks" name="replace_blocks" signature="SwitchCaseOp.replace_blocks(blocks)">
    Replace blocks and return new instruction. :param blocks: Tuple of QuantumCircuits to replace in instruction.

    **Returns**

    New ControlFlowOp with replaced blocks.

    **Return type**

    [*SwitchCaseOp*](qiskit.circuit.SwitchCaseOp "qiskit.circuit.controlflow.switch_case.SwitchCaseOp")
  </Function>

  <span id="qiskit-circuit-switchcaseop-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.SwitchCaseOp.reverse_ops" name="reverse_ops" signature="SwitchCaseOp.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-switchcaseop-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.SwitchCaseOp.soft_compare" name="soft_compare" signature="SwitchCaseOp.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-switchcaseop-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.SwitchCaseOp.validate_parameter" name="validate_parameter" signature="SwitchCaseOp.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### blocks

  <Attribute id="qiskit.circuit.SwitchCaseOp.blocks" name="blocks" />

  ### condition\_bits

  <Attribute id="qiskit.circuit.SwitchCaseOp.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.SwitchCaseOp.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.SwitchCaseOp.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.SwitchCaseOp.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.SwitchCaseOp.label" name="label">
    Return instruction label
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.SwitchCaseOp.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.SwitchCaseOp.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.SwitchCaseOp.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.SwitchCaseOp.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.SwitchCaseOp.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

